[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-data-selector"
version = "0.1.0"
description = "Zero-Shot Image Data Selector"
authors = ["Jonas Dieker jonasdieker05@gmail.com"]
license = "MIT"
readme = "README.md"

[project.dependencies]
pytorch = "torch>=2.0.0"
torchvision = "torchvision>=0.15.0"

[tool.setuptools.packages.find]
include = ["image_data_selector"]  # Automatically includes angsa_detection and its subpackages