[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-data-selector"
version = "0.1.0"
description = "Zero-Shot Image Data Selector"
authors = [{name = "Jonas Dieker", email = "jonasdieker05@gmail.com"}]
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "argparse",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["image_data_selector"]  # Automatically includes angsa_detection and its subpackages